--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,24 @@
+section h1 {
+  background: cornflowerblue;
+}
+
+h1 {
+  background: red;
+}
+
 li {
   list-style: none;
+}
+
+.summary-title {
+  background: green;
+}
+
+header {
+  text-align: center;
+}
+
+header h1:hover {
+  color: blue;
+  font-size: 5rem;
 }
